--- a/miniverse/css/personalizacao.css
+++ b/miniverse/css/personalizacao.css
@@ -63,3 +63,35 @@ body {
   border-color: #00ff99 !important;
   box-shadow: #00ff99 !important;
 }
+
+
+
+
+/*Opções*/
+
+.form-select{
+  align-items: center;
+}
+
+.form-control{
+  
+}
+
+.personalizacao{
+  
+}
+
+.formulario-personalizacao{
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+}
+
+.container{
+  padding: 60px !important;
+}
+
+.mb-4{
+  width: 40% !important;
+}
