--- a/miniverse/css/personalizacao.css
+++ b/miniverse/css/personalizacao.css
@@ -1,9 +1,14 @@
 /* ===== Estilo geral ===== */
 body {
-  background-color: rgb(113, 199, 173)!important;
+  background-color: #001d2b!important;
   color: #f4f4f4;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Ruda', sans-serif;
 }
+@font-face {
+  font-family: 'Ruda';
+  src: url(fonts/Ruda-VariableFont_wght.ttf) format('truetype');
+}
+
 /* HEADER */
 .line {
   width: 100%;
@@ -73,19 +78,16 @@ body {
   align-items: center;
 }
 
-.form-control{
-  
-}
-
-.personalizacao{
-  
-}
 
 .formulario-personalizacao{
   display: flex;
   flex-direction: column;
-
   align-items: center;
+  color: white;
+}
+
+.formulario-personalizacao h2 {
+  font-size: 4.5vh;
 }
 
 .container{
@@ -93,5 +95,26 @@ body {
 }
 
 .mb-4{
-  width: 40% !important;
+  width: 50% !important;
+}
+
+.mb-4 label {
+  font-family: 'Ruda', sans-serif;
+  color: white;
+}
+
+p {
+  font-family: 'Ruda', sans-serif;
+}
+
+button {
+  font-family: 'Ruda', sans-serif;
+}
+
+h2 {
+  font-family: 'Ruda', sans-serif;
+}
+
+a {
+  font-family: 'Ruda', sans-serif;
 }
