--- a/miniverse/css/styleProd.css
+++ b/miniverse/css/styleProd.css
@@ -556,10 +556,11 @@ body {
   font-size: 25px;
 }
 
+/* Ajusta a altura visual dos botões do accordion */
 .accordion-button {
-  padding: 0;
-  padding-bottom: 10px;
-  padding-top: 10px;
+  padding: 6px 12px; /* padrão do Bootstrap é 1rem 1.25rem (16px 20px) */
+  font-size: 0.9rem; /* levemente menor */
+  min-height: 36px; /* garante clique confortável */
 }
 
 .accordion-button:not(.collapsed)::after {
@@ -580,7 +581,7 @@ body {
   margin-bottom: 15px;
   overflow: hidden;
   box-shadow: 0 0 10px rgba(255, 165, 0, 0.25);
-  height: 4.8vh;
+  min-height: 4.8vh;
 }
 
 .accordion-halloween .accordion-button {
@@ -590,6 +591,9 @@ body {
   font-size: 1.1rem;
   letter-spacing: 0.5px;
   transition: all 0.3s ease;
+  padding: 6px 12px; /* padrão do Bootstrap é 1rem 1.25rem (16px 20px) */
+  font-size: 0.9rem; /* levemente menor */
+  min-height: 36px; /* garante clique confortável */
 }
 
 
@@ -644,7 +648,7 @@ body {
   margin-bottom: 15px;
   overflow: hidden;
   box-shadow: 0 0 10px rgba(45, 155, 104, 0.25);
-  height: 4.8vh;
+  min-height: 4.8vh;
 }
 
 .accordion-verde .accordion-button {
