Adicionando produtos para o carrinho

--- a/miniverse/css/styleProd.css
+++ b/miniverse/css/styleProd.css
@@ -110,7 +110,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 32px;
-  margin-left: 130px;
+  justify-content: center; /* centraliza */
+  margin-left: 0; /* remove esse margin fixo */
 }
 
 /*Badges*/
@@ -286,7 +287,8 @@ body {
   font-weight: 600;
   transition: all 0.3s ease;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-  width: 218px;
+  width: 100%;
+  max-width: 220px;
 }
 
 .botao-comprar:hover {
@@ -349,9 +351,9 @@ body {
   transition: all 0.3s ease !important;
 }
 
-.select2-container .select2-selection--single {
-  height: 20px !important;
-  width: 67px !important;
+.select2-container {
+  width: 100% !important;
+  max-width: 90px;
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow {
@@ -936,6 +938,7 @@ footer a:hover {
 
 @media (max-width: 768px) {
   .produto {
+    margin-left: 10px;
     flex-direction: column;
   }
 }
