--- a/miniverse/css/styleProd.css
+++ b/miniverse/css/styleProd.css
@@ -245,9 +245,8 @@ body {
 
 .quantidade h1,
 .Quantidade h1 {
-  font-size: 20px;
-  margin: 0;
-  padding-right: 10px;
+  font-size: 18px;
+  font-weight: 500;
 }
 
 /* ======== SELECT PADRÃO ======== */
@@ -937,8 +936,39 @@ footer a:hover {
 }
 
 @media (max-width: 768px) {
+
   .produto {
-    margin-left: 10px;
     flex-direction: column;
+    margin: 0;
+    gap: 20px;
   }
+
+  .informacoes {
+    text-align: center;
+  }
+
+  .secao-compra {
+    width: 100%;
+    align-items: center;
+  }
+
+  .Quantidade {
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+  }
+
+  .Quantidade h1 {
+    font-size: 18px;
+  }
+
+  .select2-container {
+    width: 120px !important;
+  }
+
+  .botao-comprar {
+    width: 100%;
+    max-width: 100%;
+  }
+
 }
