Arrumando Fontes e ajustando página de personalização

--- a/miniverse/css/personalizacao.css
+++ b/miniverse/css/personalizacao.css
@@ -121,6 +121,11 @@ body {
   letter-spacing: -1px;
 }
 
+.preco{
+  display:inline!important;
+  font-size: 1rem!important;
+}
+
 /* =========================
    BOTÃO PRINCIPAL
 ========================= */
