--- a/miniverse/css/contas.css
+++ b/miniverse/css/contas.css
@@ -1,13 +1,9 @@
 body {
     background-color: #001d2b;
     margin: 0;
-    font-family: 'Ruda', sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
-@font-face {
-    font-family: 'Ruda';
-    src: url(../css/fonts/Ruda-VariableFont_wght.ttf) format('truetype');
-  }
 /* HEADER */
 .line {
     width: 100%;
@@ -17,11 +13,11 @@ body {
 }
 
 .a_li_header {
-    color: aliceblue !important;
-    text-decoration: none;
-    /* Tira o sublinhado */
-    margin-right: 15px;
-    transition: color 0.3s;
+  font-family: 'Source Code Pro', monospace !important;
+  color: aliceblue !important;
+  text-decoration: none;/* Tira o sublinhado */
+  margin-right: 15px;
+  transition: color 0.3s;
 }
 
 .a_li_header:hover {
@@ -45,9 +41,10 @@ body {
 }
 
 .miniverse {
-    color: aliceblue;
-    font-size: 22px;
-    margin-bottom: 5px;
+  font-family: 'Bungee', sans-serif !important;
+  color: aliceblue;
+  font-size: 22px;
+  margin-bottom: 5px;
 }
 
 /* Hamburguer do menu */
