--- a/miniverse/css/personalizacao.css
+++ b/miniverse/css/personalizacao.css
@@ -1,3 +1,66 @@
+body {
+  background-color: #ffffff;
+  margin: 0;
+  font-family: 'Josefin Sans', sans-serif !important;
+}
+
+/* HEADER */
+.line {
+  width: 100%;
+  height: 4px;
+  background: #005A7F;
+  background: linear-gradient(79deg, rgba(0, 90, 127, 1) 0%, rgba(23, 146, 123, 1) 45%, rgba(44, 197, 120, 1) 100%);
+}
+
+.a_li_header {
+  font-family: 'Source Code Pro', monospace !important;
+  color: aliceblue !important;
+  text-decoration: none;
+  /* Tira o sublinhado */
+  margin-right: 15px;
+  transition: color 0.3s;
+}
+
+.a_li_header:hover {
+  color: #00ff99 !important;
+}
+
+.dropdown-item.a_li_header {
+  color: aliceblue !important;
+  background-color: transparent !important;
+}
+
+.dropdown-item.a_li_header:hover {
+  color: #00ff99 !important;
+  background-color: rgba(255, 255, 255, 0.1) !important;
+  /* leve destaque */
+}
+
+.dropmenu-marcas {
+  background-color: #092e2b;
+  border-radius: 15px;
+}
+
+.miniverse {
+  font-family: 'Bungee', sans-serif !important;
+  color: aliceblue;
+  font-size: 22px;
+  margin-bottom: 5px;
+}
+
+/* Hamburguer do menu */
+.navbar-toggler {
+  border-color: #1cbe7e;
+  /* muda a cor da borda */
+  background-color: transparent;
+}
+
+/* Cor dos "risquinhos" do ícone */
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
+
 /* =========================
    RESET BÁSICO
 ========================= */
@@ -51,7 +114,7 @@ body {
   background: #ffffff;
   padding: 50px;
   border-radius: 16px;
-  box-shadow: 0 15px 40px rgba(0,0,0,0.05);
+  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.05);
 }
 
 .campo {
@@ -85,7 +148,7 @@ body {
    RESUMO LATERAL
 ========================= */
 .resumo {
-  background: #111;
+  background: #063b22;
   color: white;
   padding: 50px 40px;
   border-radius: 16px;
@@ -99,6 +162,29 @@ body {
   font-size: 1.2rem;
   letter-spacing: 1px;
   text-transform: uppercase;
+}
+
+/* =========================
+   DESCRIÇÃO DA MINIATURA
+========================= */
+.descricao-area {
+  resize: none;
+  min-height: 130px;
+  border-radius: 12px;
+  font-size: 0.95rem;
+  line-height: 1.5;
+}
+
+.descricao-area:focus {
+  border-color: #111;
+}
+
+/* contador */
+.contador-caracteres {
+  text-align: right;
+  font-size: 0.8rem;
+  color: #777;
+  margin-top: 6px;
 }
 
 /* =========================
@@ -121,9 +207,9 @@ body {
   letter-spacing: -1px;
 }
 
-.preco{
-  display:inline!important;
-  font-size: 1rem!important;
+.preco {
+  display: inline !important;
+  font-size: 1.5rem !important;
 }
 
 /* =========================
@@ -143,7 +229,7 @@ body {
 }
 
 .btn-principal:hover {
-  background: #e30613;
+  background: #008000;
   color: white;
 }
 
