--- a/miniverse/css/styleProd.css
+++ b/miniverse/css/styleProd.css
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  background-color: #001d2b;
+  background-color: #ffffff;
   color: aliceblue;
   font-family: 'Josefin Sans', sans-serif !important;
 }
@@ -98,13 +98,37 @@ body {
   max-width: 1350px;
   margin: auto;
   padding: 32px;
-  background: #1e1e1e;
+  background: #ffffff;
+}
+
+.quadrado_halloween {
+  max-width: 1350px;
+  margin: auto;
+  padding: 32px;
+  background: #000000;
 }
 
 .rota {
   font-size: 12px;
-  color: whitesmoke;
+  color: rgb(0, 0, 0);
   margin-bottom: 16px;
+}
+.rota_halloween {
+  font-size: 12px;
+  color: rgb(160, 160, 160);
+  margin-bottom: 16px;
+}
+
+.h1_halloween{
+  color: white !important;
+}
+
+.cod_prod{
+  color: #0000007a;
+}
+
+.cod_halloween{
+  color: #ffffff7a;
 }
 
 .produto {
@@ -208,6 +232,7 @@ body {
 
 .informacoes h1 {
   margin-top: 0;
+  color: #111;
 }
 
 .pix {
@@ -224,7 +249,11 @@ body {
 
 .juros {
   font-size: 13px;
-  color: #a7a7a7;
+  color: #313131;
+}
+.juros_halloween {
+  font-size: 13px;
+  color: #ffffff7a;
 }
 
 /* ======== SEÇÃO DE COMPRA ======== */
@@ -248,6 +277,10 @@ body {
 .Quantidade h1 {
   font-size: 18px;
   font-weight: 500;
+}
+
+.qtd_halloween{
+  color: white !important;
 }
 
 /* ======== SELECT PADRÃO ======== */
@@ -548,7 +581,6 @@ body {
 /*ACCORDION*/
 .accordion {
   --bs-accordion-bg: #252525;
-  background-color: #252525 !important;
   color: white !important;
 }
 
@@ -734,7 +766,7 @@ body {
 /* ======== DESCRIÇÃO ======== */
 .descricao {
   margin-top: 2rem;
-  background: #252525;
+  background: #ffffff;
   padding: 24px;
   border-radius: 8px;
 }
@@ -760,7 +792,11 @@ body {
 
 .descricao p {
   line-height: 1.6;
-  color: #d0d0d0;
+  color: #ffffff;
+}
+
+.desc_prod{
+  color: #111111 !important;
 }
 
 /* ======== ESPECIFICAÇÕES ======== */
