--- a/miniverse/css/contas.css
+++ b/miniverse/css/contas.css
@@ -144,9 +144,9 @@ footer a:hover {
 }
 
 .miniF {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
+  font-family: 'Bungee', sans-serif !important;
 }
-
 
 
 /* Criar conta */
