--- a/miniverse/css/styleProd.css
+++ b/miniverse/css/styleProd.css
@@ -970,6 +970,7 @@ footer a:hover {
 
 .miniF {
   margin-bottom: 10px;
+  font-family: 'Bungee', sans-serif !important;
 }
 
 @media (max-width: 768px) {
