--- a/miniverse/css/carrinho.css
+++ b/miniverse/css/carrinho.css
@@ -146,6 +146,9 @@ body {
 .produto-c {
     color: #000000;
     display: flex;
+    border: #000000 2px solid;
+    border-radius: 20px;
+    padding: 2%;
 }
 
 .produto-c h1 {
@@ -247,6 +250,7 @@ footer a:hover {
 
 .miniF {
     margin-bottom: 10px;
+    font-family: 'Bungee', sans-serif !important;
 }
 
 .form-check-input:checked {
